@@ -79,7 +79,7 @@ if {$tcl_platform(os) == "Linux"} {
 
 if {$tcl_platform(os) == "Darwin"} {
   set ini_folder    "~/.Mapsforge"
-  set mtb_cmd       "~/MyTourbook/mytourbook"
+  set mtb_cmd       "~/MyTourbook.app/Contents/MacOS/mytourbook"
   set mtb_args      ""
   set maps_folder   "~/MapsforgeSrv/maps"
   set themes_folder "~/MapsforgeSrv/themes"
