@@ -1,3 +1,9 @@
+2026-01-28
+
+- README: Changed MyTourbook's download link to Github
+- Fixed script for fully supporting macOS operating system
+- Simplify closing MyTourbook gracefully by GUI's "Quit" button (Windows only!)
+
 2026-01-11
 
 - Extended scripts for macOS operating system:
